Arreglamos sistema de grillas

--- a/Aprendiendo HTML/Index.html
+++ b/Aprendiendo HTML/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primera pagina</title>
     <link rel="stylesheet" href="styles.css">
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -26,7 +26,7 @@
     </header>
     <main>
         <section class="services">
-            <section class="grid">
+            <div class="grid">
                 <div class="items">
                     <div class="item">
                         <i class="fas fa-file-code"></i>
@@ -39,7 +39,7 @@
                         <p>Generalmente asociado con bases de datos.</p>
                     </div>
                 </div>
-            </section>
+            </div>
         </section>
         <section class="about-us">
             <div class="grid">
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </section>
-        <section class="frontend grid">
+        <section>
             <div class="cuerpo-frontend">
                 <div class="texto-frontend">
                     <h3>Front-End</h3>
@@ -70,29 +70,27 @@
                     Por su parte, el desarrollo back-end consiste en escribir código que no es visto por el usuario final. Por lo general, implica trabajar en 
                     mejoras de la funcionalidad del sistema, APIs, bibliotecas y similares. En palabras simples, desarrollo back-end significa
                     trabajar con código que no se ve directamente.
-                </div>
-                <div class="texto-frontend">
+                    <br/>
                     <h3>HTML y CSS</h3>
                     HTML se utiliza para representar diversos contenidos como párrafos de texto, títulos, tablas, etc. Considerado como 
                     uno de los lenguajes más fáciles de aprender, HTML es un excelente punto de partida para cualquier desarrollador. 
                     Independientemente del área de trabajo que elijas, HTML forma parte del paquete predeterminado «Sé cómo usar una 
                     computadora». CSS se usa para darle estilo al contenido que creas con HTML. Piensa en tu sitio web como una lata de sopa.
-                     HTML es la sopa y el texto de la etiqueta, mientras que CSS es el diseño y la diagramación.                
-                </div>   
-                <div class="texto-frontend">
+                     HTML es la sopa y el texto de la etiqueta, mientras que CSS es el diseño y la diagramación.   
+                    <br/>
                     <h3>JavaScript</h3>
                     HTML se utiliza para representar diversos contenidos como párrafos de texto, títulos, tablas, etc. Considerado como 
                     uno de los lenguajes más fáciles de aprender, HTML es un excelente punto de partida para cualquier desarrollador. 
                     Independientemente del área de trabajo que elijas, HTML forma parte del paquete predeterminado «Sé cómo usar una 
                     computadora». CSS se usa para darle estilo al contenido que creas con HTML. Piensa en tu sitio web como una lata de sopa.
-                     HTML es la sopa y el texto de la etiqueta, mientras que CSS es el diseño y la diagramación.                
-                </div>   
-
-            </div>
-            <div class="img-frontend">
-                <img src="imagenes/htmlcss1.svg" alt="" class="img">
+                     HTML es la sopa y el texto de la etiqueta, mientras que CSS es el diseño y la diagramación.                             
+                </div>
+                <div class="frontend-image">
+                    <img src="imagenes/htmlcss1.svg" alt="" class="img">
+                </div>
             </div>
         </section>
+      
         <section class="backend grid">
             <div class="cuerpo-backend">
                 <div class="texto-backend">
@@ -103,8 +101,7 @@
                     y están más interesados ​​en la funcionalidad del sitio web que en su apariencia.
                     Los desarrolladores back-end usan lenguajes del lado del servidor como PHP y SQL. La comprensión básica de HTML y CSS
                     es casi necesaria para representar cualquier información de una manera presentable.
-                </div>
-                <div class="texto-backend">
+                    <br/>
                     <h3>SQL</h3>
                     Si tu sitio web recopila información del usuario, como direcciones de correo electrónico, nombres, apellidos, etc.
                     Deberás almacenar esta información en una base de datos. SQL se usa dentro de la base de datos para filtrar, agregar,
